--- a/fr/about.html
+++ b/fr/about.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-  <!-- _includes/head.html -->
-<head>
+  <head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <title>À propos - OmegaT</title>
-  
+
   <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
-  
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
 
@@ -18,12 +17,41 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/omegat-website/js/omegat.js"></script>
 
-  <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
+  <meta name="description" content="OmegaT is a free open-source translation memory application written in Java. It is a tool intended for professional translators.">
 
   <link rel="canonical" href="https://omegat-org.github.io/omegat-website/fr/about">
-  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/fr/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Open-Source Translation Memory Tool" href="/omegat-website/fr/feed.xml">
 
   
+
+  <!-- SEO tags -->
+  
+  <meta property="og:title"       content="À propos - OmegaT" />
+  <meta name="description"        content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels." />
+  <meta property="og:description" content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels." />
+  <meta property="og:url"         content="https://omegat-org.github.io/omegat-website/fr/about" />
+  <meta property="og:site_name"   content="OmegaT, l'outil libre de TAO" />
+  
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@OmegaTOfficial" />
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "name": "",
+    "url": "https://omegat-org.github.io/omegat-website/fr/omegat-website",
+    "headline": "À propos",
+    "description": "OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels.",
+    "publisher": {
+      "@type": "Organization",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://omegat-org.github.io/omegat-website/img/omegat_96.png"
+      }
+    },
+    "sameAs": ["https://sourceforge.net/projects/omegat/","https://github.com/omegat-org/","https://twitter.com/OmegaTOfficial","https://www.facebook.com/OmegaTOfficial"]
+  }</script>
+  <!-- /SEO tags -->
 </head>
 
 
@@ -33,7 +61,7 @@
     <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#omegat-menu" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"><!----></span>
         <span class="icon-bar"><!----></span>
@@ -43,7 +71,7 @@
         <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
       </a>
     </div>
-    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
         <li><a href="/omegat-website/fr/download">Téléchargement</a></li>
       </ul>
@@ -127,25 +155,18 @@
     <div class="jumbotron jumbo-page titles-about"><h1>À propos</h1></div>
         
     <div class="container">
-  <h3>À propos de ce site</h3>
-  <p>Ce site est maintenu pour le compte du projet OmegaT par :</p>
-  <p>Marc Prior<br/> Baumeistersweg 12<br/> 45896 Gelsenkirchen<br/> Germany<br/> <br/> Tel. +49 209 94757413<br/> VAT ID DE160842097</p>
-  <table>
-    <tbody>
-      <tr>
-        <td>Contenu du site Web :</td>
-        <td>Marc Prior, Briac Pilpré</td>
-      </tr>
-      <tr>
-        <td>Conception graphique du site :</td>
-        <td>Briac Pilpré</td>
-      </tr>
-      <tr>
-        <td>Traduction du site dans cette langue :</td>
-        <td>Marc Prior, Briac Pilpré</td>
-      </tr>
-    </tbody>
-  </table>
+  <h2>À propos de ce site</h2>
+
+  <div class="text-md-center">
+  <h3>Auteurs du contenu du site</h3>
+  <ul class="list-unstyled"><li>Marc Prior</li><li>Briac Pilpré</li></ul>
+
+  <h3>Conception du site web</h3>
+  <ul class="list-unstyled">
+    <li>Briac Pilpré</li>
+  </ul><h3>Traducteurs de la version française</h3>
+  <ul class="list-unstyled"><li>Briac Pilpré</li></ul>
+  </div>
   <h2>Le projet OmegaT</h2>
   <p>Le projet OmegaT existe grâce à un groupe informel et international de bénévoles. Son objectif est de développer, distribuer et promouvoir OmegaT, un logiciel open source de mémoire de traduction.</p>
   <p>Les principaux acteurs du projet sont :</p>
@@ -165,49 +186,7 @@
     <h3>Responsable de la localisation, propriétaire du groupe des utilisateurs</h3>
     <p>Jean-Christophe Helary</p>
     <h3>Développeurs</h3>
-    <ul class="list-unstyled">
-      <li>Keith Godfrey</li>
-      <li>Lev Abashkin</li>
-      <li>Zoltan Bartko</li>
-      <li>Volker Berlin</li>
-      <li>Didier Briel</li>
-      <li>Kim Bruning</li>
-      <li>Alex Buloichik</li>
-      <li>Thomas Cordonnier</li>
-      <li>Sandra Jean Chua</li>
-      <li>Enrique Estévez Fernández</li>
-      <li>Martin Fleurke</li>
-      <li>Wildrich Fourie</li>
-      <li>Tony Graham</li>
-      <li>Phillip Hall</li>
-      <li>Jean-Christophe Helary</li>
-      <li>Chihiro Hio</li>
-      <li>Thomas Huriaux</li>
-      <li>Hans-Peter Jacobs</li>
-      <li>Kyle Katarn</li>
-      <li>Piotr Kulik</li>
-      <li>Ibai Lakunza Velasco</li>
-      <li>Guido Leenders</li>
-      <li>Aaron Madlon-Kay</li>
-      <li>Fabián Mandelbaum</li>
-      <li>Manfred Martin</li>
-      <li>Adiel Mittmann</li>
-      <li>Hiroshi Miura</li>
-      <li>John Moran</li>
-      <li>Maxym Mykhalchuk</li>
-      <li>Arno Peters</li>
-      <li>Henry Pijffers</li>
-      <li>Briac Pilpré</li>
-      <li>Tiago Saboga</li>
-      <li>Andrzej Sawuła</li>
-      <li>Benjamin Siband</li>
-      <li>Yu Tang</li>
-      <li>Rashid Umarov</li>
-      <li>Antonio Vilei</li>
-      <li>Ilia Vinogradov</li>
-      <li>Martin Wunderlich</li>
-      <li>Michael Zakharov</li>
-    </ul>
+    <ul class="list-unstyled"><li>Keith Godfrey</li><li>Lev Abashkin</li><li>Zoltan Bartko</li><li>Volker Berlin</li><li>Didier Briel</li><li>Kim Bruning</li><li>Alex Buloichik</li><li>Thomas Cordonnier</li><li>Sandra Jean Chua</li><li>Enrique Estévez Fernández</li><li>Martin Fleurke</li><li>Wildrich Fourie</li><li>Tony Graham</li><li>Phillip Hall</li><li>Jean-Christophe Helary</li><li>Chihiro Hio</li><li>Thomas Huriaux</li><li>Hans-Peter Jacobs</li><li>Kyle Katarn</li><li>Piotr Kulik</li><li>Ibai Lakunza Velasco</li><li>Guido Leenders</li><li>Aaron Madlon-Kay</li><li>Fabián Mandelbaum</li><li>Manfred Martin</li><li>Adiel Mittmann</li><li>Hiroshi Miura</li><li>John Moran</li><li>Maxym Mykhalchuk</li><li>Arno Peters</li><li>Henry Pijffers</li><li>Briac Pilpré</li><li>Tiago Saboga</li><li>Andrzej Sawuła</li><li>Benjamin Siband</li><li>Yu Tang</li><li>Rashid Umarov</li><li>Antonio Vilei</li><li>Ilia Vinogradov</li><li>Martin Wunderlich</li><li>Michael Zakharov</li></ul>
   </div>
   <p>Pour mieux comprendre l&#39;esprit OmegaT, nous vous invitons à découvrir la <a href="philosophy.html">philosophie du projet</a>.</p>
   <p>Depuis ses débuts, le projet a reçu le soutien de bien d&#39;autres contributeurs, hélas trop nombreux pour être cités ici, mais pour l&#39;aide desquels nous sommes très reconnaissants.</p>
@@ -223,45 +202,43 @@
       <div class="col-sm-offset-3 col-sm-2 footer-column">
         <h4>Réseaux sociaux</h4>
         <div class="header-line"><!----></div>
-        <ul>
-          <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img alt="Sourceforge" src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
-          </li>
-          <li>
-            <a href="https://github.com/omegat-org/"><img alt="Github" src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
-          </li>
-          <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img alt="Twitter" src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img alt="Facebook" src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
-          </li>
-        </ul>
+        <div class="footer-links">
+          <ul>
+            <li><a href="https://sourceforge.net/projects/omegat/"><img alt="Sourceforge" src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a></li>
+            <li><a href="https://github.com/omegat-org/"><img alt="Github" src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a></li>
+            <li><a href="https://twitter.com/OmegaTOfficial"><img alt="Twitter" src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a></li>
+            <li><a href="https://www.facebook.com/OmegaTOfficial"><img alt="Facebook" src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a></li>
+          </ul>
+        </div>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Documentation</h4>
         <div class="header-line"><!----></div>
-        <ul>
-          <li><a href="/omegat-website/fr/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
-          <li><a href="/omegat-website/fr/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
-          <li><a href="/omegat-website/fr/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
-          <li><a href="/omegat-website/fr/reviews"><span class="glyphicon glyphicon-heart"></span> Point sur OmegaT</a></li>
-        </ul>
+        <div class="footer-links">
+          <ul>
+            <li><a href="/omegat-website/fr/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
+            <li><a href="/omegat-website/fr/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
+            <li><a href="/omegat-website/fr/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
+            <li><a href="/omegat-website/fr/reviews"><span class="glyphicon glyphicon-heart"></span> Point sur OmegaT</a></li>
+          </ul>
+        </div>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
         <div class="header-line"><!----></div>
-        <ul>
-          <li>
-          <a href="/omegat-website/fr/contact"><span class="glyphicon glyphicon-envelope"></span> Contact et assistance</a>
-          </li>
-          <li>
-          <a href="/omegat-website/fr/about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
-          </li>
-          <li>
-          <a href="/omegat-website/fr/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
-          </li>
-        </ul>
+        <div class="footer-links">
+          <ul>
+            <li>
+            <a href="/omegat-website/fr/contact"><span class="glyphicon glyphicon-envelope"></span> Contact et assistance</a>
+            </li>
+            <li>
+            <a href="/omegat-website/fr/about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
+            </li>
+            <li>
+            <a href="/omegat-website/fr/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
+            </li>
+          </ul>
+        </span>
       </div>
   </div>
   <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/fr/">omegat.org</a></p>
