--- a/fr/index.html
+++ b/fr/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-  <!-- _includes/head.html -->
-<head>
+  <head>
   <meta charset="utf-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
   <title>OmegaT, l'outil libre de TAO - OmegaT</title>
-  
+
   <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
-  
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
 
@@ -18,12 +17,41 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/omegat-website/js/omegat.js"></script>
 
-  <meta name="description" content="OmegaT is a free translation memory application written in Java. It is a tool intended for professional translators.">
+  <meta name="description" content="OmegaT is a free open-source translation memory application written in Java. It is a tool intended for professional translators.">
 
   <link rel="canonical" href="https://omegat-org.github.io/omegat-website/fr/">
-  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Translation Memory Tool" href="/omegat-website/fr/feed.xml">
+  <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Open-Source Translation Memory Tool" href="/omegat-website/fr/feed.xml">
 
   
+
+  <!-- SEO tags -->
+  
+  <meta property="og:title"       content="OmegaT, l'outil libre de TAO - OmegaT" />
+  <meta name="description"        content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels." />
+  <meta property="og:description" content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels." />
+  <meta property="og:url"         content="https://omegat-org.github.io/omegat-website/fr/" />
+  <meta property="og:site_name"   content="OmegaT, l'outil libre de TAO" />
+  
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@OmegaTOfficial" />
+  <script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "name": "",
+    "url": "https://omegat-org.github.io/omegat-website/fr/omegat-website",
+    "headline": "OmegaT, l'outil libre de TAO",
+    "description": "OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels.",
+    "publisher": {
+      "@type": "Organization",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://omegat-org.github.io/omegat-website/img/omegat_96.png"
+      }
+    },
+    "sameAs": ["https://sourceforge.net/projects/omegat/","https://github.com/omegat-org/","https://twitter.com/OmegaTOfficial","https://www.facebook.com/OmegaTOfficial"]
+  }</script>
+  <!-- /SEO tags -->
 </head>
 
 
@@ -33,7 +61,7 @@
     <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#omegat-menu" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"><!----></span>
         <span class="icon-bar"><!----></span>
@@ -43,7 +71,7 @@
         <img alt="OmegaT" class="logo-omegat" src="/omegat-website/img/omegat.svg" height="80" width="80"/>
       </a>
     </div>
-    <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
         <li><a href="/omegat-website/fr/download">Téléchargement</a></li>
       </ul>
@@ -187,7 +215,7 @@
         </ul>
       </div>
     </div>
-    <div class="row im-centered"><img alt="OmegaT Screenshot" src="/omegat-website/img/screenshots/main_window_fr.png" class="img-responsive"/></div>
+    <div class="row im-centered"><img alt="Capture d&#39;écran d&#39;OmegaT" src="/omegat-website/img/screenshots/main_window_fr.png" class="img-responsive"/></div>
   </div>
   <div class="container-fluid section" id="page-download">
     <div class="row"> </div>
@@ -250,7 +278,7 @@
           <div class="item active">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote1.jpg" style="width: 100px;height:100px;" alt="User portrait"></div>
+                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote1.jpg" style="width: 100px;height:100px;" alt="Portrait d&#39;utilisateur"></div>
                 <div class="col-sm-9">
                   <p>OmegaT est vraiment génial, je ne peux rien traduire sans ça !</p><small>John R. - Traducteur DE> EN </small></div>
               </div>
@@ -260,7 +288,7 @@
           <div class="item">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;" alt="User portrait"></div>
+                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;" alt="Portrait d&#39;utilisateur"></div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p><small>Olga Z. - Traductrice EN > RU</small></div>
               </div>
@@ -270,7 +298,7 @@
           <div class="item">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote3.jpg" style="width: 100px;height:100px;" alt="User portrait"></div>
+                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote3.jpg" style="width: 100px;height:100px;" alt="Portrait d&#39;utilisateur"></div>
                 <div class="col-sm-9">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rutrum elit in arcu blandit, eget pretium nisl accumsan. Sed ultricies commodo tortor.</p><small>Audrey R. - Traductrice JA > ES</small></div>
               </div>
@@ -339,45 +367,43 @@
       <div class="col-sm-offset-3 col-sm-2 footer-column">
         <h4>Réseaux sociaux</h4>
         <div class="header-line"><!----></div>
-        <ul>
-          <li>
-            <a href="https://sourceforge.net/projects/omegat/"><img alt="Sourceforge" src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a>
-          </li>
-          <li>
-            <a href="https://github.com/omegat-org/"><img alt="Github" src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a>
-          </li>
-          <li>
-            <a href="https://twitter.com/OmegaTOfficial"><img alt="Twitter" src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com/OmegaTOfficial"><img alt="Facebook" src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a>
-          </li>
-        </ul>
+        <div class="footer-links">
+          <ul>
+            <li><a href="https://sourceforge.net/projects/omegat/"><img alt="Sourceforge" src="/omegat-website/img/sourceforge.svg" height="24" width="24"/> Sourceforge</a></li>
+            <li><a href="https://github.com/omegat-org/"><img alt="Github" src="/omegat-website/img/github.svg" height="24" width="24"/> Github</a></li>
+            <li><a href="https://twitter.com/OmegaTOfficial"><img alt="Twitter" src="/omegat-website/img/twitter.svg" height="24" width="24"/> Twitter</a></li>
+            <li><a href="https://www.facebook.com/OmegaTOfficial"><img alt="Facebook" src="/omegat-website/img/facebook.svg" height="24" width="24"/> Facebook</a></li>
+          </ul>
+        </div>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Documentation</h4>
         <div class="header-line"><!----></div>
-        <ul>
-          <li><a href="/omegat-website/fr/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
-          <li><a href="/omegat-website/fr/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
-          <li><a href="/omegat-website/fr/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
-          <li><a href="/omegat-website/fr/reviews"><span class="glyphicon glyphicon-heart"></span> Point sur OmegaT</a></li>
-        </ul>
+        <div class="footer-links">
+          <ul>
+            <li><a href="/omegat-website/fr/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuel</a></li>
+            <li><a href="/omegat-website/fr/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutoriels</a></li>
+            <li><a href="/omegat-website/fr/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guides pratiques</a></li>
+            <li><a href="/omegat-website/fr/reviews"><span class="glyphicon glyphicon-heart"></span> Point sur OmegaT</a></li>
+          </ul>
+        </div>
       </div>
       <div class="col-sm-2 footer-column">
         <h4>Le projet OmegaT</h4>
         <div class="header-line"><!----></div>
-        <ul>
-          <li>
-          <a href="/omegat-website/fr/contact"><span class="glyphicon glyphicon-envelope"></span> Contact et assistance</a>
-          </li>
-          <li>
-          <a href="/omegat-website/fr/about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
-          </li>
-          <li>
-          <a href="/omegat-website/fr/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
-          </li>
-        </ul>
+        <div class="footer-links">
+          <ul>
+            <li>
+            <a href="/omegat-website/fr/contact"><span class="glyphicon glyphicon-envelope"></span> Contact et assistance</a>
+            </li>
+            <li>
+            <a href="/omegat-website/fr/about"><span class="glyphicon glyphicon-question-sign"></span> À propos</a>
+            </li>
+            <li>
+            <a href="/omegat-website/fr/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
+            </li>
+          </ul>
+        </span>
       </div>
   </div>
   <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/fr/">omegat.org</a></p>
