--- a/fr/howtos/new_filter.html
+++ b/fr/howtos/new_filter.html
@@ -8,9 +8,8 @@
 
   <title>Guide - Création d'un nouveau filtre de fichiers - OmegaT</title>
 
-  <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
-  <link rel="icon" sizes="192x192" href="/omegat-website/img/omegat_192.png">
-  <link rel="apple-touch-icon-precomposed" sizes="192x192" href="/omegat-website/img/omegat_192.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png"/>
+  <link rel="icon" sizes="192x192" href="/omegat-website/img/omegat_192.png"/>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
@@ -19,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/omegat-website/js/omegat.js"></script>
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application written in Java. It is a tool intended for professional translators.">
+  <meta name="description" content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels.">
 
   <link rel="canonical" href="https://omegat-org.github.io/omegat-website/fr/howtos/new_filter">
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Open-Source Translation Memory Tool" href="/omegat-website/fr/feed.xml">
@@ -37,7 +36,6 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Guide - Création d'un nouveau filtre de fichiers - OmegaT" />
-  <meta name="description"        content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels." />
   <meta property="og:description" content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels." />
   <meta property="og:url"         content="https://omegat-org.github.io/omegat-website/fr/howtos/new_filter" />
   <meta property="og:site_name"   content="OmegaT, l'outil libre de TAO" />
@@ -253,7 +251,7 @@
             <a href="/omegat-website/fr/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophie</a>
             </li>
           </ul>
-        </span>
+        </div>
       </div>
   </div>
   <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/fr/">omegat.org</a></p>
