--- a/howtos/text_export.html
+++ b/howtos/text_export.html
@@ -8,9 +8,8 @@
 
   <title>Howto - Using the OmegaT text export function (scripting interface) - OmegaT</title>
 
-  <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png">
-  <link rel="icon" sizes="192x192" href="/omegat-website/img/omegat_192.png">
-  <link rel="apple-touch-icon-precomposed" sizes="192x192" href="/omegat-website/img/omegat_192.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/omegat-website/favicon.png"/>
+  <link rel="icon" sizes="192x192" href="/omegat-website/img/omegat_192.png"/>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
@@ -19,7 +18,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/omegat-website/js/omegat.js"></script>
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application written in Java. It is a tool intended for professional translators.">
+  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
 
   <link rel="canonical" href="https://omegat-org.github.io/omegat-website/howtos/text_export">
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Open-Source Translation Memory Tool" href="/omegat-website/feed.xml">
@@ -37,7 +36,6 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Howto - Using the OmegaT text export function (scripting interface) - OmegaT" />
-  <meta name="description"        content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
   <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
   <meta property="og:url"         content="https://omegat-org.github.io/omegat-website/howtos/text_export" />
   <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
@@ -325,7 +323,7 @@ selection.txt	- contains the text highlighted by the user, when Ctrl-Shift-C is 
             <a href="/omegat-website/philosophy"><span class="glyphicon glyphicon-console"></span> Philosophy</a>
             </li>
           </ul>
-        </span>
+        </div>
       </div>
   </div>
   <p class="footer-copyright">Copyright &#xA9; 2017 - <a href="/omegat-website/">omegat.org</a></p>
