Added two quotes

--- a/fr/index.html
+++ b/fr/index.html
@@ -288,7 +288,7 @@
               <div class="row">
                 <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote1.jpg" style="width: 100px;height:100px;" alt="Portrait d&#39;utilisateur"></div>
                 <div class="col-sm-9">
-                  <p>OmegaT est vraiment génial, je ne peux rien traduire sans ça !</p><small>John R. - Traducteur DE> EN </small></div>
+                        <p>Le compagnon idéal pour ceux d&#39;entre nous qui n&#39;ont pas besoin de complexité mais d&#39;efficacité ; les glossaires, la saisie et la traduction automatique me rendent plus productif pour mes traductions littéraires.</p><small>Diego Merino - Traducteur EN > ES </small></div>
               </div>
             </blockquote>
           </div>
@@ -296,9 +296,11 @@
           <div class="item">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center"><img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;" alt="Portrait d&#39;utilisateur"></div>
-                <div class="col-sm-9">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p><small>Olga Z. - Traductrice EN > RU</small></div>
+                <!--div class="col-sm-3 text-center">
+                  <img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;" alt="User portrait">
+                </div-->
+                <div class="col-sm-12">
+                  <p>Les traducteurs italiens de LibreOffice et d&#39;ODFAuthors sont fiers d&#39;utiliser cet outil pour accomplir leur tâche au sein de la communauté LibreOffice.</p><small>Valter Mura - Traducteur EN > IT</small></div>
               </div>
             </blockquote>
           </div>
