--- a/index.html
+++ b/index.html
@@ -311,8 +311,11 @@ translation", and you will have to look elsewhere for it.)</p>
                   <img class="img-circle" src="/omegat-website/img/quote1.jpg" style="width: 100px;height:100px;" alt="User portrait">
                 </div>
                 <div class="col-sm-9">
-                  <p>OmegaT is really awesome, I cannot translate anything without it!</p>
-                  <small>John R. - Translator DE &gt; EN  </small>
+                        <p>The perfect companion for those of us who don't need
+                        complexity but efficiency; glossaries, auto-complete
+                        and automatic translation makes my work in literary
+                        translation so much efficient</p>
+                  <small>Diego Merino - Translator EN &gt; ES  </small>
                 </div>
               </div>
             </blockquote>
@@ -321,12 +324,12 @@ translation", and you will have to look elsewhere for it.)</p>
           <div class="item">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center">
+                <!--div class="col-sm-3 text-center">
                   <img class="img-circle" src="/omegat-website/img/quote2.jpg" style="width: 100px;height:100px;" alt="User portrait">
-                </div>
-                <div class="col-sm-9">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam auctor nec lacus ut tempor. Mauris.</p>
-                  <small>Olga Z. - Translator EN &gt; RU</small>
+                </div-->
+                <div class="col-sm-12">
+                  <p>ODFAuthors and LibreOffice's Italian translators are proud to use such a good tool for their hard work within the LibreOffice Community.</p>
+                  <small>Valter Mura - Translator EN &gt; IT</small>
                 </div>
               </div>
             </blockquote>
