--- a/fr/howtos/compatibility.html
+++ b/fr/howtos/compatibility.html
@@ -12,11 +12,12 @@
   <link rel="icon" sizes="192x192" href="/omegat-website/img/omegat_192.png"/>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
+  <link type="text/css" rel="stylesheet" href="/omegat-website/fr/assets/omegat.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="/omegat-website/js/omegat.js"></script>
+  <script type="text/javascript" src="/omegat-website/fr/assets/omegat.js"></script>
+
 
   <meta name="description" content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels.">
 
@@ -170,7 +171,7 @@
 
 <h3>Observations générales</h3>
 
-<p>Since it is standard procedure for professional translators to receive and deliver texts in digital form, users of OmegaT are naturally interested in its compatibility with other software products. This HOWTO aims to provide information in this area.</p>
+<p>Since it is standard procedure for professional translators to receive and deliver texts in digital form, users of OmegaT are naturally interested in its compatibility with other software products. Ce guide a pour objectif de vous apporter les informations nécessaires dans ce domaine.</p>
 
 <p>A general observation: &quot;compatibility&quot; is rarely a black and white, &quot;yes&quot; or &quot;no&quot; issue. Where the vendor of a software product claims that his product is compatible with another piece of software, this compatibility is seldom 100%. Conversely, where products are clearly not directly compatible, it is often possible to find procedures by which they can work together. The question which must be answered is whether these procedures are acceptable in terms of the result and the effort involved, and the answer is likely to vary from one user to another. In other words, &quot;compatibility&quot; is not only about products, but also about workflows.<br/></p>
 
