--- a/howtos/linux.html
+++ b/howtos/linux.html
@@ -12,11 +12,12 @@
   <link rel="icon" sizes="192x192" href="/omegat-website/img/omegat_192.png"/>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-  <link rel="stylesheet" href="/omegat-website/css/omegat.css"/>
+  <link type="text/css" rel="stylesheet" href="/omegat-website/assets/omegat.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="/omegat-website/js/omegat.js"></script>
+  <script type="text/javascript" src="/omegat-website/assets/omegat.js"></script>
+
 
   <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
 
