--- a/fr/download.html
+++ b/fr/download.html
@@ -28,7 +28,7 @@
 
   <meta name="description" content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels.">
 
-  <link rel="canonical" href="http://www.omegat.org/fr/download">
+  <link rel="canonical" href="http://omegat.org/fr/download">
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Open-Source Translation Memory Tool" href="/fr/feed.xml">
 
   
@@ -45,7 +45,7 @@
   
   <meta property="og:title"       content="Téléchargement - OmegaT" />
   <meta property="og:description" content="OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels." />
-  <meta property="og:url"         content="http://www.omegat.org/fr/download" />
+  <meta property="og:url"         content="http://omegat.org/fr/download" />
   <meta property="og:site_name"   content="OmegaT, l'outil libre de TAO" />
   
   <meta name="twitter:card" content="summary" />
@@ -55,14 +55,14 @@
     "@context": "http://schema.org",
     "@type": "WebSite",
     "name": "",
-    "url": "http://www.omegat.org/fr",
+    "url": "http://omegat.org/fr",
     "headline": "Téléchargement",
     "description": "OmegaT est un logiciel libre de TAO écrit en Java conçu et pour des traducteurs professionnels.",
     "publisher": {
       "@type": "Organization",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://omegat-org.github.io/omegat-website/img/omegat_96.png"
+        "url": "http://omegat.org/img/omegat_96.png"
       }
     },
     "sameAs": ["https://sourceforge.net/projects/omegat/","https://github.com/omegat-org/","https://twitter.com/OmegaTOfficial","https://www.facebook.com/OmegaTOfficial"]
