--- a/howtos/compiling_from_source.html
+++ b/howtos/compiling_from_source.html
@@ -28,7 +28,7 @@
 
   <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
 
-  <link rel="canonical" href="http://www.omegat.org/howtos/compiling_from_source">
+  <link rel="canonical" href="http://omegat.org/howtos/compiling_from_source">
   <link rel="alternate" type="application/rss+xml" title="Omegat - The Free Open-Source Translation Memory Tool" href="/feed.xml">
 
   
@@ -45,7 +45,7 @@
   
   <meta property="og:title"       content="Howto - Compiling OmegaT from the source code - OmegaT" />
   <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
-  <meta property="og:url"         content="http://www.omegat.org/howtos/compiling_from_source" />
+  <meta property="og:url"         content="http://omegat.org/howtos/compiling_from_source" />
   <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
   
   <meta name="twitter:card" content="summary" />
@@ -55,14 +55,14 @@
     "@context": "http://schema.org",
     "@type": "WebSite",
     "name": "",
-    "url": "http://www.omegat.org/",
+    "url": "http://omegat.org/",
     "headline": "Howto - Compiling OmegaT from the source code",
     "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://omegat-org.github.io/omegat-website/img/omegat_96.png"
+        "url": "http://omegat.org/img/omegat_96.png"
       }
     },
     "sameAs": ["https://sourceforge.net/projects/omegat/","https://github.com/omegat-org/","https://twitter.com/OmegaTOfficial","https://www.facebook.com/OmegaTOfficial"]
