Updated OmegaT versions

--- a/fr/index.html
+++ b/fr/index.html
@@ -270,8 +270,8 @@
 
     <div class="container-fluid versions">
       <ul class="list-group">
-        <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 6</a></span> Version standard</li>
-        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.2</a></span> Dernière version</li>
+        <li class="list-group-item"><span class="badge"><a href="download#standard">OmegaT 3.6.0 update 7</a></span> Version standard</li>
+        <li class="list-group-item"><span class="badge"><a href="download#latest">OmegaT 4.1.2 update 1</a></span> Dernière version</li>
       </ul>
     </div>
   </div>
