- Fix "Download" translation - Added link to Latest Linux 32b

--- a/fr/download.html
+++ b/fr/download.html
@@ -264,39 +264,39 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   <tbody><tr id="standard_windows_jre">
       <td class="version-name">Windows avec JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Windows.exe/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Windows.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_windows_nojre">
       <td class="version-name">Windows sans JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Windows_without_JRE.exe/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Windows_without_JRE.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_osx_signed">
       <td class="version-name">OS X Signé</td>
       <td> <span rel="popover" data-platform="osx_signed" data-title="OS X Signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_signed"></div></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Mac_Signed.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Mac_Signed.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_osx_unsigned">
       <td class="version-name">OS X Non signé</td>
       <td> <span rel="popover" data-platform="osx_unsigned" data-title="OS X Non signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_osx_unsigned"></div></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Mac.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Mac.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_linux_jre">
       <td class="version-name">Linux avec JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Linux.tar.bz2/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Linux.tar.bz2/download" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_linux_jre64b">
       <td class="version-name">Linux avec JRE 64 bits</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Linux_64.tar.bz2/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Linux_64.tar.bz2/download" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_linux_nojre">
       <td class="version-name">Cross-platform sans JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Without_JRE.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Without_JRE.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_webstart">
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_webstart"></div></td>
-      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart/OmegaT.jnlp" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart/OmegaT.jnlp" role="button">Télécharger</a></td></td>
   </tr><tr id="standard_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span><div id="info_source"></div></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Source.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Standard/OmegaT 3.6.0 update 7/OmegaT_3.6.0_07_Source.zip/download" role="button">Télécharger</a></td></td>
   </tr></tbody>
 
 </table>
@@ -316,39 +316,43 @@ href="#download-wizard" data-toggle="collapse">Sélecteur de téléchargement</a
   <tbody><tr id="latest_windows_jre">
       <td class="version-name">Windows avec JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Windows.exe/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Windows.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_windows_jre64b">
       <td class="version-name">Windows avec JRE 64 bits</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Windows_64.exe/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Windows_64.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_windows_nojre">
       <td class="version-name">Windows sans JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Windows_without_JRE.exe/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Windows_without_JRE.exe/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_osx_signed">
       <td class="version-name">OS X Signé</td>
       <td> <span rel="popover" data-platform="osx_signed" data-title="OS X Signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Mac_Signed.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Mac_Signed.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_osx_unsigned">
       <td class="version-name">OS X Non signé</td>
       <td> <span rel="popover" data-platform="osx_unsigned" data-title="OS X Non signé" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Mac.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Mac.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_linux_jre64b">
       <td class="version-name">Linux avec JRE 64 bits</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Linux_64.tar.bz2/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Linux_64.tar.bz2/download" role="button">Télécharger</a></td></td>
+  </tr><tr id="latest_linux_jre">
+      <td class="version-name">Linux avec JRE</td>
+      <td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Linux.tar.bz2/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_linux_nojre">
       <td class="version-name">Cross-platform sans JRE</td>
       <td></td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Without_JRE.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Without_JRE.zip/download" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_webstart">
       <td class="version-name">Web Start</td>
       <td> <span rel="popover" data-platform="webstart" data-title="Web Start" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart-dev/OmegaT.jnlp" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://omegat.sourceforge.net/webstart-dev/OmegaT.jnlp" role="button">Télécharger</a></td></td>
   </tr><tr id="latest_source">
       <td class="version-name">Code source</td>
       <td> <span rel="popover" data-platform="source" data-title="Code source" data-content="" class="glyphicon glyphicon-info-sign"><!----></span> </td>
-      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Source.zip/download" role="button">Download</a></td></td>
+      <td> <a class="btn btn-primary version-download" href="http://sourceforge.net/projects/omegat/files/OmegaT - Latest/OmegaT 4.1.2 update 1/OmegaT_4.1.2_01_Beta_Source.zip/download" role="button">Télécharger</a></td></td>
   </tr></tbody>
 
 </table>
